# contrivist-stratagem

./: .gitmodules  CMakeLists.txt
assets/shaders/: billboard_shader.geom  simple_fs.glsl  simple_shader.frag  simple_shader.geom  simple_shader.vert  simple_vs.glsl  texture_fs.glsl  texture_shader.frag  wireframe_fs.glsl  wireframe_gs.glsl
src/: base_object.cpp  base_object.h  config.h.in  grid.cpp  grid.h  main.cpp  matrix.cpp  matrix.h  octree.cpp  octree.h  scene.cpp  scene.h  shader.cpp  shader.h  sprite.cpp  sprite.h  version.h.in  vertex.h  window.cpp  window.h
